--- a/app/globals.css
+++ b/app/globals.css
@@ -44,6 +44,9 @@ h1 {
 
 .button {
   @apply bg-foreground text-background flex items-center justify-center px-7 py-3.5 leading-tight;
+    &:hover {
+    @apply bg-foreground-700 duration-300;
+    }
 }
 
 .home-block {
@@ -51,16 +54,29 @@ h1 {
 }
 
 .info-block {
-    min-width: clamp(20rem, 6vw, 44.375rem);
+  min-width: clamp(23.75rem, 6vw, 44.375rem);
+}
+
+.home-icons {
+    max-width: 32.75rem;
+    min-width: 23.75rem;
+    transition: opacity 1.6s ease-in-out;
+}
+
+.home-icons:hover > .home-icon:not(:hover) {
+    opacity: 0.4;
+}
+
+.home-icon:hover {
+    > .icon {
+      scale: 1.3;
+    }
 }
 
 .video-collage {
-    min-width: 100%;
-}
-
-@media (min-width: 10.24rem) {
-    .video-collage {
-        min-width: 27.25rem;
-        max-width: 45rem
+  min-width: 27.5rem;
+    > .video {
+      width: 30%;
+      max-width: 50rem;
     }
 }
