add landing page

--- a/app/globals.css
+++ b/app/globals.css
@@ -32,7 +32,7 @@ body {
 h1 {
   @apply text-8xl font-semibold;
   font-size: clamp(2rem, 5vw, 6rem);
-   p {
+  p {
     @apply text-4xl;
     font-size: clamp(1.625rem, 3.5vw, 3.625rem);
   }
@@ -44,12 +44,12 @@ h1 {
 
 .button {
   @apply bg-foreground text-background flex items-center justify-center px-7 py-3.5 leading-tight;
-    &:hover {
+  &:hover {
     @apply bg-foreground-700 duration-300;
-    }
+  }
 }
 
-.home-block {
+.main > div {
   max-width: 94rem;
 }
 
@@ -58,25 +58,25 @@ h1 {
 }
 
 .home-icons {
-    max-width: 32.75rem;
-    min-width: 23.75rem;
-    transition: opacity 1.6s ease-in-out;
+  max-width: 32.75rem;
+  min-width: 23.75rem;
+  transition: opacity 1.6s ease-in-out;
 }
 
 .home-icons:hover > .home-icon:not(:hover) {
-    opacity: 0.4;
+  opacity: 0.4;
 }
 
 .home-icon:hover {
-    > .icon {
-      scale: 1.3;
-    }
+  > .icon {
+    scale: 1.3;
+  }
 }
 
 .video-collage {
   min-width: 27.5rem;
-    > .video {
-      width: 30%;
-      max-width: 50rem;
-    }
+  > .video {
+    width: 30%;
+    max-width: 50rem;
+  }
 }
