--- a/app/globals.css
+++ b/app/globals.css
@@ -21,17 +21,15 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
+  background: linear-gradient(to bottom,
       transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
 h1 {
   @apply text-8xl font-semibold;
   font-size: clamp(2rem, 5vw, 6rem);
+
   p {
     @apply text-4xl;
     font-size: clamp(1.625rem, 3.5vw, 3.625rem);
@@ -44,16 +42,22 @@ h1 {
 
 .button {
   @apply bg-foreground text-background flex items-center justify-center px-7 py-3.5 leading-tight;
+
   &:hover {
     @apply bg-warning duration-300;
   }
+}
+
+.loading-img {
+  width: 100%;
+  padding-top: calc(350 / 600 * 100%);
 }
 
 main {
   margin-top: var(--appbar-height);
 }
 
-.main > div {
+.main>section {
   max-width: 94rem;
 }
 
@@ -67,45 +71,47 @@ main {
   transition: opacity 1.6s ease-in-out;
 }
 
-.home-icons:hover > .home-icon:not(:hover) {
+.home-icons:hover>.home-icon:not(:hover) {
   opacity: 0.4;
 }
 
 .home-icon:hover {
-  > .icon {
+  >.icon {
     scale: 1.3;
   }
 }
 
 .video-collage {
   min-width: 27.5rem;
-  > .video {
+
+  >.video {
     width: 32.5%;
     max-width: 50rem;
   }
 }
 
-.cards > div {
+.cards>div {
   max-width: 46rem;
   width: 40vw;
 }
 
-.mini-cards > div {
+.mini-cards>div {
   max-width: 30rem;
   width: 26vw;
 }
 
 @media (max-width: 1024px) {
-  .cards > div {
+  .cards>div {
     width: 100%;
   }
-  .mini-cards > div {
+
+  .mini-cards>div {
     width: 35vw;
   }
 }
 
 @media (max-width: 768px) {
-  .mini-cards > div {
+  .mini-cards>div {
     width: 100%;
   }
 }
