--- a/app/globals.css
+++ b/app/globals.css
@@ -48,6 +48,10 @@ h1 {
   }
 }
 
+.text-hover {
+  @apply hover:text-warning duration-300 cursor-pointer
+}
+
 .loading-img {
   width: 100%;
   padding-top: calc(350 / 600 * 100%);
@@ -59,6 +63,10 @@ main {
 
 .main>section {
   max-width: 94rem;
+}
+
+.footer {
+  min-height: var(--main-height);
 }
 
 .info-block {
