--- a/app/globals.css
+++ b/app/globals.css
@@ -21,9 +21,12 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(to bottom,
+  background: linear-gradient(
+      to bottom,
       transparent,
-      rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+      rgb(var(--background-end-rgb))
+    )
+    rgb(var(--background-start-rgb));
 }
 
 h1 {
@@ -49,7 +52,7 @@ h1 {
 }
 
 .text-hover {
-  @apply hover:text-warning duration-300 cursor-pointer
+  @apply hover:text-warning duration-300 cursor-pointer;
 }
 
 .loading-img {
@@ -61,12 +64,16 @@ main {
   margin-top: var(--appbar-height);
 }
 
-.main>section {
+.main > section {
   max-width: 94rem;
 }
 
 .footer {
   min-height: var(--main-height);
+}
+
+.footer_info {
+  max-width: 40rem;
 }
 
 .info-block {
@@ -79,12 +86,12 @@ main {
   transition: opacity 1.6s ease-in-out;
 }
 
-.home-icons:hover>.home-icon:not(:hover) {
+.home-icons:hover > .home-icon:not(:hover) {
   opacity: 0.4;
 }
 
 .home-icon:hover {
-  >.icon {
+  > .icon {
     scale: 1.3;
   }
 }
@@ -92,34 +99,34 @@ main {
 .video-collage {
   min-width: 27.5rem;
 
-  >.video {
+  > .video {
     width: 32.5%;
     max-width: 50rem;
   }
 }
 
-.cards>div {
+.cards > div {
   max-width: 46rem;
   width: 40vw;
 }
 
-.mini-cards>div {
+.mini-cards > div {
   max-width: 30rem;
   width: 26vw;
 }
 
 @media (max-width: 1024px) {
-  .cards>div {
+  .cards > div {
     width: 100%;
   }
 
-  .mini-cards>div {
+  .mini-cards > div {
     width: 35vw;
   }
 }
 
 @media (max-width: 768px) {
-  .mini-cards>div {
+  .mini-cards > div {
     width: 100%;
   }
 }
